.metadata/.plugins/org.eclipse.cdt.ui/application.build.log
09:25:42 **** Build of configuration Debug for project application ****
make all 
'Building file: ../src/apm_core.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -D __XMK__ -I../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v9.2 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/apm_core.d" -MT"src/apm_core.d" -o "src/apm_core.o" "../src/apm_core.c"
'Finished building: ../src/apm_core.c'
' '
'Building file: ../src/dispatch.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -D __XMK__ -I../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v9.2 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/dispatch.d" -MT"src/dispatch.d" -o "src/dispatch.o" "../src/dispatch.c"
In file included from ../src/dispatch.c:21:0:
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:138:19: error: unknown type name 'sys_sem_t'
 err_t sys_sem_new(sys_sem_t *sem, u8_t count);
                   ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:141:21: error: unknown type name 'sys_sem_t'
 void sys_sem_signal(sys_sem_t *sem);
                     ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:147:25: error: unknown type name 'sys_sem_t'
 u32_t sys_arch_sem_wait(sys_sem_t *sem, u32_t timeout);
                         ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:150:19: error: unknown type name 'sys_sem_t'
 void sys_sem_free(sys_sem_t *sem);
                   ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:155:19: error: unknown type name 'sys_sem_t'
 int sys_sem_valid(sys_sem_t *sem);
                   ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:159:26: error: unknown type name 'sys_sem_t'
 void sys_sem_set_invalid(sys_sem_t *sem);
                          ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:173:20: error: unknown type name 'sys_mbox_t'
 err_t sys_mbox_new(sys_mbox_t *mbox, int size);
                    ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:178:20: error: unknown type name 'sys_mbox_t'
 void sys_mbox_post(sys_mbox_t *mbox, void *msg);
                    ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:182:24: error: unknown type name 'sys_mbox_t'
 err_t sys_mbox_trypost(sys_mbox_t *mbox, void *msg);
                        ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:190:27: error: unknown type name 'sys_mbox_t'
 u32_t sys_arch_mbox_fetch(sys_mbox_t *mbox, void **msg, u32_t timeout);
                           ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:199:30: error: unknown type name 'sys_mbox_t'
 u32_t sys_arch_mbox_tryfetch(sys_mbox_t *mbox, void **msg);
                              ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:205:20: error: unknown type name 'sys_mbox_t'
 void sys_mbox_free(sys_mbox_t *mbox);
                    ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:209:20: error: unknown type name 'sys_mbox_t'
 int sys_mbox_valid(sys_mbox_t *mbox);
                    ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:213:27: error: unknown type name 'sys_mbox_t'
 void sys_mbox_set_invalid(sys_mbox_t *mbox);
                           ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:223:1: error: unknown type name 'sys_thread_t'
 sys_thread_t sys_thread_new(const char *name, lwip_thread_fn thread, void *arg, int stacksize, int prio);
 ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:295:1: error: unknown type name 'sys_prot_t'
 sys_prot_t sys_arch_protect(void);
 ^
../../xilkernel_bsp_0/micro_blaze_sub_system_microblaze_1/include/lwip/sys.h:296:25: error: unknown type name 'sys_prot_t'
 void sys_arch_unprotect(sys_prot_t pval);
                         ^
make: *** [src/dispatch.o] Erreur 1

09:25:43 Build Finished (took 1s.330ms)

